2007-05-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* widget.tcl (Widget::theme): make sure Tk 8.5a6 is recognized as
	having the themed widgets

2006-12-20  J. Tang  <tang@jtang.org>

	* util.tcl: fixed BWidget::write for widgets that require
	DynamicHelp.  [bug 1518803]

2006-12-05  Andreas Kupries <andreask@activestate.com>

	* demo/demo.tcl (Demo::main): Removed the 'inscope' qualifier from
	  the 'package require Bwidget'. The package system already forces
	  loading and sourcing of package code in the global namespace, so
	  this is bogus.

2006-11-13  J. Tang  <tang@jtang.org>

	* panedw.tcl: if activator is set to line then its width is set to
	3.  --activator was an undocumented option; updated man page to
	make it documented.  Thanks to Jos Decoster for pointing this out.

2006-11-10  J. Tang  <tang@jtang.org>

	* widget.tcl: remove relative namespace resolution of variables,
	in anticipation of TIP 278.  Widget should have been doing this
	anyways.  [bug 1579744]

	* DragSite.html: noted that -draginitcmd can return an empty
	string to prevent a drag [bug 740499]
	
	* DropSite.html: fixed documentation with DropSite::register
	command [bug 740474]

	* combobox.tcl: allow autocomplete and autopost be
	enabled/disabled after the widget was created [bug 1588808]; fixed
	keysym in autopost binding [bug 1589111]

	* tree.tcl: fixed error with drag & drop's autoscroll [bug
	1408494]
	
	* listbox.tcl: fixed error with drag & drop's autoscroll; fixed
	error when dropping at the end of the list

	* Added dynamic help to text tags (man page updated); fixed resize
	bug with scrollframes.  Thanks to Jos Decoster for these patches.

2006-10-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* utils.tcl (BWidget::bindMouseWheel): do not make special
	mousewheel bindings if global ones exist (like from style::as)

2006-09-28  J. Tang  <tang@jtang.org>

	**** BWIDGET 1.8.0 TAGGED ****
	
	* removed Makefile.in

	* font.tcl: correctly handle code path when user cancels dialog
